Changelog for Miosix np embedded OS


v2.01
- Fixed bug in intrusive.h which caused compiler errors when building with
  exceptions and RTTI disabled
- Added new board: stm32f411re_nucleo
- Added timeconversion.cpp/.h as the first step towards high resolution
  timers
- Added new board: efm32gg332f1024_polinode
- Added new architacture: cortexM3_efm32gg
- Refactored endianness and atomic_ops interfaces from the individual
  architectures to arch/common/core to prevent code duplication.
- Added preliminary C++11 support
v2.0
- Added support for new board, oledboard2
- Added support for new board, tempsensor
- Added support for new board als_mainboard_rev2
- Be less restrictive in pthread_attr_setstacksize(). Accept also stack sizes
  not divisible by 4, as Thread::create() will simply align the stack size.
- Added proper compiler patch versioning through the _MIOSIX_GCC_PATCH_VERSION
  builtin macro.
- Added small fixed to the previous newlib patch. This is the final change for
  termios.h
- Implemented termios support in Miosix, now it is possible to disable echo
  and/or enter raw mode on serial ports using a standard POSIX interface.
- Added sys/termios.h to newlib patch
- Added sys/ioctl.h to newlib patch
- Improved Makefile path referencing to always use relative paths, as using
  absolute ones fails when the absolute path contains spaces. This proved to
  be impossible with makefiles alone and required to add a small perl script
- Added versioning to miosix_settings.h and board_settings.h to prevent
  misconfiguration when those files are updated.
- Moved board_settings.h in the config directory to allow out of git tree
  projects to tweak those files without editing files in the Miosix git repo.
- Added miosix/_tools/init_project_out_of_git_tree.pl script to help set up
  out of git tree projects.
- New makefile now supporting out of git tree projects, to help having the
  Miosix git repo as a submodule of another git repo.